<resources>
    <string name="app_name">Children Supervisior</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="navigation_title">Navigation</string>
    <string name="settings">Settings</string>
    <string name="tasks">Tasks</string>
    <string name="tasks_done">Done</string>
    <string name="tasks_todo">Todo</string>
    <string name="rewards">Rewards</string>
    <string name="calendar">Calendar</string>
    <string-array name="sample_tasks">
        <item>Clean a room</item>
        <item>Wash the dishes</item>
        <item>Do a homework</item>
    </string-array>
    <string name="title_activity_task">TaskActivity</string>
    <string name="pref_alarm_sequence">Alarm Sequence</string>
    <string name="pref_alarm_sequence_summary">Key sequence to generate alarm</string>
    <string name="pref_alarm_sequence_default">#0000#</string>
    <string name="done">Done</string>
    <string name="add_photo">Add photo</string>
    <string name="pref_parent_name">Parent name</string>
    <string name="pref_parent_name_summary">Name of children parent on the server</string>
    <string name="pref_child_name">Child name</string>
    <string name="pref_child_name_summary">Name of child on the server</string>
    <string name="rest_failure">Can connect to server</string>

</resources>
